--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-  <img src="img_backup.jpg">
-  <iframe src = "https://drive.google.com/file/d/1NV4ZmtlqT5fZB3eg6K2K8y-qp2FbXhKW/preview" width="280" height="480"></iframe>
+  <img src="img_backup.jpg" width="280" height="480">
   <a href="contact.html">Contact ></a>
   <h1>Atom</h1>
   Pattarapol Sanguannual
