--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
     <ol>
         <li>Tel: 0905194105</li>
         <li>Email: 31971.skn@skn.ac.th</li>
+        <li>    </li>
+        <a href="index.html">< Back to Main</a>
     </ol>
 </body>
 </html>
