--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <img src="img_backup.jpg" width="280" height="480">
+  <img src="img_backup.jpg" width="280" height="auto">
   <a href="contact.html">Contact ></a>
   <h1>Atom</h1>
   Pattarapol Sanguannual
