--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <img src="img.jpg" alt="" style="width: 280; height: auto; border-radius: 50%;">
+  <img src="img.jpg" alt="" style="width: 20%; height: auto; border-radius: 50%;">
   <a href="contact.html">Contact ></a>
   <h1>Atom</h1>
   Pattarapol Sanguannual
