--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
 </head>
 
 <body>
-  <img src="img.jpg" alt="" style="width: 20%; height: auto; border-radius: 50%;">
-  <a href="contact.html">Contact ></a>
-  <h1>Atom</h1>
-  Pattarapol Sanguannual
-  <hr>
-  <h2> นาย ภัทรพล สงวนนวล </h2>
-  ม.6/2 เลขที่ 1 <br>
+    <table>
+    <tr>
+      <td>  <img src="img.jpg" alt="" style="width: 20%; height: auto; border-radius: 50%;">
+</td>
+      <td>  <a href="contact.html">Contact ></a>
+</td>
+    </tr>
+    
+    <tr>
+      <td><h1>Atom</h1></td>
+      <td>Pattarapol Sanguannual</td>
+      <td> </td>
+      <td><h2> นาย ภัทรพล สงวนนวล </h2></td>
+      <td>ม.6/2 เลขที่ 1 <br></td>
+      <td>โรงเรียนสวนกุหลาบวิทยาลัยนนทบุรี</td>
+    </tr>
+
+  
   โรงเรียนสวนกุหลาบวิทยาลัยนนทบุรี
   
   <ul>
