--- a/index.html
+++ b/index.html
@@ -10,14 +10,35 @@
 </head>
 
 <body>
-  <img src="img.jpg" alt="" style="width: 280; height: auto; border-radius: 50%;">
-  <a href="contact.html">Contact ></a>
-  <h1>Atom</h1>
-  Pattarapol Sanguannual
-  <hr>
-  <h2> นาย ภัทรพล สงวนนวล </h2>
-  ม.6/2 เลขที่ 1 <br>
-  โรงเรียนสวนกุหลาบวิทยาลัยนนทบุรี
+    <table>
+
+       <tr>
+
+           <td>
+
+               <img src="img.jpg" alt="" style="width: 280; height: auto; border-radius: 50%;">
+
+
+           </td>
+
+           <td>
+
+               <!-- <hr style="border-style: dashed double none; height: 20px;"> -->
+
+               <h1>นาย ภัทรพล สงวนนวล</h1>
+               ม.6/2 เลขที่ 1 <a href="contact.html">Contact ></a>
+               โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี <br>
+
+               <a href = "https://www.skn.ac.th/"> ไปยังเว็บไซต์ของหน่วยงาน </a>
+
+           </td>
+
+       </tr>
+
+   </table>
+  
+
+   <br>
   
   <ul>
     <li>เพศชาย</li>
