--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
            <td>
 
-               <img src="img.jpg" alt="" style="width: 280; height: auto; border-radius: 50%;">
+               <img src="img.jpg" alt="" style="width: 20%; height: auto; border-radius: 50%;">
 
 
            </td>
