--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                <h1>นาย ภัทรพล สงวนนวล</h1>
                ม.6/2 เลขที่ 1 <a href="contact.html">Contact ></a>
-               โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี <br>
+               <h1>โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี</h1> <br>
 
                <a href = "https://www.skn.ac.th/"> ไปยังเว็บไซต์ของหน่วยงาน </a>
 
