--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <tr>
 
            <td>
-               <img src="img.jpg" alt="" style="width: 5%; height: auto; border-radius: 50%;">
+               <img src="img.jpg" alt="" style="width: 10%; height: auto; border-radius: 50%;">
            </td>
 
            <td>
@@ -23,8 +23,8 @@
                <!-- <hr style="border-style: dashed double none; height: 20px;"> -->
 
                <h1>นาย ภัทรพล สงวนนวล</h1>
-               ม.6/2 เลขที่ 1 <a href="contact.html">Contact ></a>
-               <h1>โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี</h1> <br>
+               ม.6/2 เลขที่ 1 <a href="contact.html">Contact ></a> <br>
+               โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี<br>
 
                <a href = "https://www.skn.ac.th/"> ไปยังเว็บไซต์ของหน่วยงาน </a>
 
