--- a/index.html
+++ b/index.html
@@ -38,26 +38,29 @@
    <br>
   
   <ul>
+    <li><h2>Skills:</h1></li>
     <li>เพศชาย</li>
     <li>อีก 1 ปี 3 เดือน บรรลุนิติภาวะ</li>
     <li>ไม่กินตำลึง</li>
     <li>2 ปี 4 เดือน ปรับไม่เกิน 30,000 บาท</li>
-  </ul>
-    
-  <a href="https://atoris.one">Go to my WordPress website -></a>
-  
+  </ul>  
   
   <br><hr>
   <h1>Table:</h1>
   <table>
     <tr>
-      <td>อาหารที่ชอบ</td>
-      <td>อาหารที่ไม่ชอบ</td>
+      <td>Year</td>
+      <td>Education</td>
     </tr>
     
     <tr>
-      <td>หมู</td>
-      <td>สุนัข</td>
+      <td>2019-2026</td>
+      <td>Suankularb Wittayalai Nonthaburi</td>
+    </tr>
+
+    <tr>
+      <td>2012-2018</td>
+      <td>Suankularb Wittayalai Nonthaburi</td>
     </tr>
 </body>    
   
