--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <tr>
       <td>2012-2018</td>
-      <td>Suankularb Wittayalai Nonthaburi</td>
+      <td>Assumption College Thonburi</td>
     </tr>
 </body>    
   
